openshift/wordpress/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: docker.io/bitnami/mariadb:11.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /bitnami/mariadb
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
