openshift/wordpress/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
spec:
  to:
    kind: Service
    name: wordpress
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
